<resources>
    <string name="app_name">KAL</string>
    <string name="clear_button" translatable="false">AC</string>
    <string name="brackets_button" translatable="false">(&#160;&#160;)</string>
    <string name="percentage_button" translatable="false">%</string>
    <string name="division_button" translatable="false">÷</string>
    <string name="digit_7_button" translatable="false">7</string>
    <string name="digit_8_button" translatable="false">8</string>
    <string name="digit_9_button" translatable="false">9</string>
    <string name="multiplication_button" translatable="false">×</string>
    <string name="digit_4_button" translatable="false">4</string>
    <string name="digit_5_button" translatable="false">5</string>
    <string name="digit_6_button" translatable="false">6</string>
    <string name="minus_button" translatable="false">–</string>
    <string name="digit_1_button" translatable="false">1</string>
    <string name="digit_2_button" translatable="false">2</string>
    <string name="digit_3_button" translatable="false">3</string>
    <string name="plus_button" translatable="false">+</string>
    <string name="digit_0_button" translatable="false">0</string>
    <string name="dot_button" translatable="false">.</string>
    <string name="equals_button" translatable="false">=</string>
    <string name="sqrt" translatable="false">√</string>
    <string name="pi" translatable="false">π</string>
    <string name="power" translatable="false">x<sup><small>n</small></sup></string>
    <string name="factorial" translatable="false">!</string>
    <string name="ln" translatable="false">ln</string>
    <string name="log" translatable="false">log</string>
    <string name="sin" translatable="false">sin</string>
    <string name="cos" translatable="false">cos</string>
    <string name="tan" translatable="false">tan</string>
    <string name="asin" translatable="false">sin<sup><small>-1</small></sup></string>
    <string name="acos" translatable="false">cos<sup><small>-1</small></sup></string>
    <string name="atan" translatable="false">tan<sup><small>-1</small></sup></string>
    <string name="e" translatable="false">e</string>
    <string name="exp" translatable="false">e<sup><small>x</small></sup></string>
    <string name="deg" translatable="false">DEG</string>
    <string name="rad" translatable="false">RAD</string>
    <string name="absolute" translatable="false">|x|</string>
    <string name="expression_error">Error</string>
    <string name="expression_infinity">Value is too high</string>
    <string name="theme_selection_text">Theme</string>
    <string name="formatting_selection_text">Formatting</string>
    <string name="other_selection_text">Other</string>
    <string name="history_options_menu">Clear history</string>
    <string name="history_data_menu_copy">Copy</string>
    <string name="history_data_menu_share">Share</string>
    <string name="history_data_menu_delete">Delete</string>
    <string name="title_history">History</string>
    <string name="cash_counter_title">Cash Counter</string>
    <string name="currency_country_inr">India / INR</string>
    <string name="currency_name_inr">Indian Rupee</string>
    <string name="grand_total">Grand Total</string>
    <string name="notes_count">%1$s notes</string>
    <string name="note_count_single">1 note</string>
    <string name="keypad_done">Done</string>
    <string name="keypad_next">Next</string>
    <string name="keypad_hint_type">Type the count</string>
    <string name="keypad_hint_limit">Up to 99,999 per denomination</string>
    <string name="title_settings">Settings</string>
    <string name="title_about">About</string>
    <string name="title_select_theme">Choose theme</string>
    <string name="title_vibrations">Vibrations</string>
    <string name="title_sound_effects">Sounds</string>
    <string name="title_dynamic_colors">Dynamic colors</string>
    <string name="title_select_color">Choose color</string>
    <string name="title_precision">Precision</string>
    <string name="title_max_scientific_notation_digits">Scientific notation</string>
    <string name="title_separator">Separator</string>
    <string name="title_decimal_separator">Decimal separator</string>
    <string name="title_swipes">Swipes</string>
    <string name="title_saving_intermediate_results">Automatic saving of results</string>
    <string name="description_vibrations">Haptic feedback when clicking keyboard buttons</string>
    <string name="description_sound_effects">Sound effects when clicking keyboard buttons</string>
    <string name="description_select_theme">Light or dark theme for your app</string>
    <string name="description_dynamic_colors">Dynamic colors from your wallpaper</string>
    <string name="description_select_color">60+ colors to suit your taste</string>
    <string name="description_precision">Number of decimal places</string>
    <string name="description_max_scientific_notation_digits">Max scientific notation digits</string>
    <string name="description_separator">Group separator symbol</string>
    <string name="description_decimal_separator">Decimal separator symbol</string>
    <string name="description_swipes">Swipes across the screen</string>
    <string name="description_swipes2">Main tabs</string>
    <string name="description_swipes3">Digits and scientific functions</string>
    <string name="description_saving_intermediate_results">Automatic saving of results in the history. The equal button is optional</string>
    <string name="theme_element_1">System</string>
    <string name="theme_element_2">Light</string>
    <string name="theme_element_3">Dark</string>
    <string name="dark_mode_coming_soon">Coming Soon\nDark mode is currently under development and will be available in an upcoming release.</string>
    <string name="separator_element_1">Comma</string>
    <string name="separator_element_2">Dot</string>
    <string name="separator_element_3">Space</string>
    <string name="developer_title">Developer</string>
    <string name="developer_name">NORVI</string>
    <string name="developer_founder">Founded by DANTE</string>
    <string name="developer_summary">NORVI • DANTE</string>
    <string name="support_title">Support</string>
    <string name="support_email_title">Email Support</string>
    <string name="support_email_address">norvi.support.distant457@aleeas.com</string>
    <string name="support_email_subject">KAL Support Request</string>
    <string name="github_title">GitHub Profile</string>
    <string name="github_url" translatable="false">https://github.com/officemendante-art</string>
    <string name="app_info_group_title">App Info &amp; Open Source</string>
    <string name="info_selection_text">App info</string>
    <string name="source_code_title">Source Code &amp; Fork</string>
    <string name="source_code_desc">KAL • Fork of Calculator-You</string>
    <string name="title_open_source">Source code &amp; Fork</string>
    <string name="description_open_source">KAL • Fork of Calculator-You</string>
    <string name="title_licenses">Licenses</string>
    <string name="description_licenses">View open-source licenses</string>
    <string name="version_title">Version</string>
    <string name="title_version_app">Version</string>
    <string name="description_version_app">1.1.0</string>
    <string name="version_display_format">%1$s</string>
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="privacy_policy_desc">Offline application • No data collected</string>
    <string name="title_privacy_policy">Privacy policy</string>
    <string name="description_privacy_policy">Offline application • No data collected</string>
    <string name="changelog_title">Version History</string>
    <string name="privacy_dialog_title">Privacy Policy</string>
    <string name="privacy_dialog_message">KAL is an offline utility developed by NORVI. It collects no user data, has no analytics, and does not connect to the internet. All calculations and settings stay locally on your device.</string>
    <string name="url_privacy_policy" translatable="false">https://github.com/officemendante-art</string>
    <string name="url_open_source" translatable="false">https://github.com/officemendante-art</string>
    <string name="clear_history_title">Clear the history?</string>
    <string name="clear_history_dismiss">Dismiss</string>
    <string name="clear_history_clear">Clear</string>
    <string name="swipes_cancel">Cancel</string>
    <string name="swipes_ok">OK</string>
    <string name="options_tool_tip">More options</string>
    <string name="arrow_back_tool_tip">Back</string>
    <string name="copy_text_tool_tip">Copy text</string>
    <string name="preview_format_text" translatable="false">1000000.789123456789123456789123</string>
    <string name="empty_history">No history yet</string>
    <string name="empty_history_sub">Calculations you run will be saved here, so you can pull an old result back into the display any time.</string>
    <string name="month_1_date">January</string>
    <string name="month_2_date">February</string>
    <string name="month_3_date">March</string>
    <string name="month_4_date">April</string>
    <string name="month_5_date">May</string>
    <string name="month_6_date">June</string>
    <string name="month_7_date">July</string>
    <string name="month_8_date">August</string>
    <string name="month_9_date">September</string>
    <string name="month_10_date">October</string>
    <string name="month_11_date">November</string>
    <string name="month_12_date">December</string>
    <string name="today_date">Today</string>
    <string name="yesterday_date">Yesterday</string>
    <string name="days_ago_2_date">2 days ago</string>
    <string name="days_ago_3_date">3 days ago</string>
    <string name="days_ago_4_date">4 days ago</string>
    <string name="days_ago_5_date">5 days ago</string>
    <string name="days_ago_6_date">6 days ago</string>
    <string name="days_ago_7_date">7 days ago</string>
    <string name="title_physical_quantity">Physical quantity</string>
    <string name="title_unit">Unit</string>
    <string name="physical_quantity_length">Length</string>
    <string name="physical_quantity_time">Time</string>
    <string name="physical_quantity_mass">Mass</string>
    <string name="physical_quantity_temperature">Temperature</string>
    <string name="physical_quantity_speed">Speed</string>
    <string name="physical_quantity_force">Force</string>
    <string name="physical_quantity_energy">Energy</string>
    <string name="physical_quantity_power">Power</string>
    <string name="physical_quantity_pressure">Pressure</string>
    <string name="physical_quantity_volume">Volume</string>
    <string name="physical_quantity_area">Area</string>
    <string name="physical_quantity_density">Density</string>
    <string name="physical_quantity_frequency">Frequency</string>
    <string name="physical_quantity_torque">Torque</string>
    <string name="physical_quantity_light">Light</string>
    <string name="physical_quantity_storage">Storage</string>
    <string name="physical_quantity_viscosity">Viscosity</string>
    <string name="physical_quantity_angle">Angle</string>
    <string name="physical_quantity_fuel">Fuel</string>
    <string name="unit_meter">Meter</string>
    <string name="unit_kilometer">Kilometer</string>
    <string name="unit_centimeter">Centimeter</string>
    <string name="unit_millimeter">Millimeter</string>
    <string name="unit_mile">Mile</string>
    <string name="unit_yard">Yard</string>
    <string name="unit_foot">Foot</string>
    <string name="unit_inch">Inch</string>
    <string name="unit_nautical_mile">Nautical Mile</string>
    <string name="unit_second">Second</string>
    <string name="unit_minute">Minute</string>
    <string name="unit_hour">Hour</string>
    <string name="unit_day">Day</string>
    <string name="unit_week">Week</string>
</resources>